--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-google-api-python-client
-google-auth-oauthlib
-google-genai
-bs4
-markdown
-jinja2
-python-dotenv
+google-api-python-client==2.165.0
+google-auth-oauthlib==1.2.1
+google-genai==1.8.0
+Markdown==3.7
+Jinja2==3.1.6
+python-dotenv==1.0.1
